# water_agent

./: .gitignore  start_backend.bat  start_frontend.bat
backend/: init_data.sql  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agent/: analyst.py  analyst_tools.py  chat_agent.py  chat_tools.py  collector.py  patrol_workflow.py  state.py
backend/app/constants/: agent.py  chat_agent.py  documents.py  monitoring.py
backend/app/core/: chroma.py  config.py  database.py  neo4j.py  redis.py  security.py  ws_manager.py
backend/app/models/: alert.py  alert_rule.py  chat_message.py  chat_session.py  indicator.py  knowledge_document.py  monitoring.py  patrol_analysis.py  patrol_log.py  report.py  reservoir.py  role.py  station.py  user.py
backend/app/pipelines/: collector.py  health_probe.py  report_generator.py
backend/app/prompt/: alert.yaml  chat.yaml  chat_agent.yaml  report.yaml
backend/app/routers/: alert_rules.py  alerts.py  auth.py  chat.py  dashboard.py  documents.py  graph.py  graph_admin.py  indicators.py  monitoring.py  patrol_log.py  report.py  reservoir.py  roles.py  stations.py  users.py
backend/app/schemas/: alert_rules.py  alerts.py  auth.py  chat.py  common.py  dashboard.py  documents.py  graph.py  graph_admin.py  indicators.py  monitorings.py  patrol_log.py  report.py  reservoir.py  response.py  roles.py  stations.py  user.py  users.py
backend/app/services/: alert_rules.py  alerts.py  auth.py  chat.py  dashboard.py  documents.py  graph.py  graph_admin.py  indicators.py  monitoring.py  patrol_log.py  report.py  reservoir.py  roles.py  stations.py  users.py
backend/app/states/: analysis.py  chat_agent.py  monitoring.py  patrol.py  report.py
backend/app/utils/: db_init.py  exception.py  file.py  llm_retry.py  logger_config.py  mock_data_generator.py  model_factory.py  prompt_factory.py  retriever.py
backend/neo4j_data/: graph_seed.json  neo4j-knowledge-graph.cypher
doc/: API接口文档.md  Agent架构设计文档.md  学习路线指南.md  模块说明文档.md  水库水质智慧监测平台_前端驱动功能模块与接口设计.md  水库水质智能监测分析平台_开发模块与接口设计.md  水库水质智能监测分析平台_开发设计文档.md  项目结构文档.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+52 files in other folders)
