[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "websockets>=16.0",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pymysql",
    "pydantic",
    "pydantic_settings",
    "PyJWT",
    "bcrypt",
    "python-multipart",
    "aiomysql",
    "pyyaml",
    "langchain_community",
    "langchain",
    "pypdf",
    "langchain_openai",
    "langchain_deepseek",
    "redis",
    "neo4j",
    "python_jose",
    "cryptography",
    "langchain-chroma>=1.1.0",
    "aiofiles>=24.1.0",
    "dashscope>=1.25.21",
]
