[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler",
    "websockets",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pymysql",
    "pydantic",
    "pydantic_settings",
    "PyJWT",
    "bcrypt",
    "python-multipart",
    "aiomysql",
    "pyyaml",
    "langchain_community",
    "langchain",
    "pypdf",
    "langchain_openai",
    "langchain_deepseek",
    "redis",
    "neo4j",
    "python_jose",
    "cryptography",
    "langchain-chroma",
    "aiofiles",
    "dashscope",
    "rank-bm25",
    "jieba",
]
